gcc/testsuite/gfortran.dg/pr88025.f90
! { dg-do compile }
! PR fortran/88025
program p
   type t
      character(('')) :: c = 'c'  ! { dg-error "Scalar INTEGER expression expected" }
   end type
end
